[package]
name = "stashlist_launcher"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.0.0-beta.9"
tauri-plugin-stronghold = "2.0.0-beta.6"
rust-argon2 = "2.1.0"
dotenv = "0.15.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"

